Updates TODO & README for unit testing TODO

--- a/MultipleDesktop.Windows.Forms/TODO.txt
+++ b/MultipleDesktop.Windows.Forms/TODO.txt
@@ -3,3 +3,5 @@
 	// TODO a desktop is switched
 
 Investigate registry/shell compatibility for 32 & 64 bit OSes
+
+Switch to TDD & back-test existing code
