Adds PropertyChangedBinding for use in VirtualDesktopConfiguration unit tests. Adds unit tests for VirtualDesktopConfiguration.BindToTarget(...).

--- a/MultipleDesktop.Windows.Forms/TODO.txt
+++ b/MultipleDesktop.Windows.Forms/TODO.txt
@@ -19,3 +19,5 @@ Add license
 		moq mock library
 
 Investigate lookup of application name for use in name of configuration file
+
+Add tests for PropertyChangedBinding
